--- a/home/@guide/codinglist.html
+++ b/home/@guide/codinglist.html
@@ -14,12 +14,12 @@
 
 	<title>코딩리스트 : 과천문화재단</title>
 
-	<link rel="stylesheet" href="/gcart/home/resource/css/app.css">
+	<link rel="stylesheet" href="../resource/css/app.css">
 
-	<script src="/gcart/home/resource/js/lib/jquery-1.12.4.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/bluebird.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/slick.min.js"></script>
-  <script src="/gcart/home/resource/js/common.js"></script>
+	<script src="../resource/js/lib/jquery-1.12.4.min.js"></script>
+	<script src="../resource/js/lib/bluebird.min.js"></script>
+	<script src="../resource/js/lib/slick.min.js"></script>
+  <script src="../resource/js/common.js"></script>
   <style>
 		.tbl-base a { text-decoration:underline; }
 		.tbl-base a:hover { text-decoration:none; }
@@ -33,7 +33,7 @@
 		<header class="header-area"></header>
 		<!-- [Start] main-area -->
 		<section class="main-area" id="main">
-			<div class="visual-area" style="background-image:url('/gcart/home/resource/img/visual_theater.jpg');">
+			<div class="visual-area" style="background-image:url('../resource/img/visual_theater.jpg');">
 				<div class="visual-inner">
 					<div class="tit-area">
 						<h2 class="tit-d1">코딩리스트</h2>
@@ -63,61 +63,61 @@
 									<tr class="done">
 										<td>메인(main)</td>
 										<td>메인</td>
-										<td><a href="/gcart/home/main/index.html" target="_page">index.html</a></td>
+										<td><a href="../main/index.html" target="_page">index.html</a></td>
 										<td>완료</td>
 									</tr>
 									<tr class="done">
 										<td rowspan="4">재단소개(intro)</td>
 										<td>이사장 인사말</td>
-										<td><a href="/gcart/home/intro/purpose.html" target="_page">purpose.html</a></td>
+										<td><a href="../intro/purpose.html" target="_page">purpose.html</a></td>
 										<td>완료</td>
 									</tr>
 									<tr class="del">
 										<td>비전과 미션</td>
-										<td><a href="/gcart/home/intro/vision.html" target="_page">vision.html</a></td>
+										<td><a href="../intro/vision.html" target="_page">vision.html</a></td>
 										<td>삭제</td>
 									</tr>
 									<tr class="done">
 										<td>조직도</td>
-										<td><a href="/gcart/home/intro/organization.html" target="_page">organization.html</a></td>
+										<td><a href="../intro/organization.html" target="_page">organization.html</a></td>
 										<td>완료</td>
 									</tr>
 									<tr class="done">
 										<td>찾아오는길</td>
-										<td><a href="/gcart/home/intro/map.html" target="_page">map.html</a></td>
+										<td><a href="../intro/map.html" target="_page">map.html</a></td>
 										<td>완료</td>
 									</tr>
 									<tr class="done">
 										<td rowspan="4">주요사업소개(business)</td>
 										<td>공연전시</td>
-										<td><a href="/gcart/home/business/concert.html" target="_page">concert.html</a></td>
+										<td><a href="../business/concert.html" target="_page">concert.html</a></td>
 										<td>완료</td>
 									</tr>
 									<tr class="done">
 										<td>극장운영</td>
-										<td><a href="/gcart/home/business/theater.html" target="_page">theater.html</a></td>
+										<td><a href="../business/theater.html" target="_page">theater.html</a></td>
 										<td>완료</td>
 									</tr>
 									<tr class="done">
 										<td>예술교육</td>
-										<td><a href="/gcart/home/business/education.html" target="_page">education.html</a></td>
+										<td><a href="../business/education.html" target="_page">education.html</a></td>
 										<td>완료</td>
 									</tr>
 									<tr class="done">
 										<td>지역문화</td>
-										<td><a href="/gcart/home/business/culture.html" target="_page">culture.html</a></td>
+										<td><a href="../business/culture.html" target="_page">culture.html</a></td>
 										<td>완료</td>
 									</tr>
 									<tr class="done">
 										<td>공지사항(notice)</td>
 										<td>공지 게시판</td>
-										<td><a href="/gcart/home/notice/notice.html" target="_page">notice.html</a></td>
+										<td><a href="../notice/notice.html" target="_page">notice.html</a></td>
 										<td>완료</td>
 									</tr>
 									<tr class="done">
 										<td>공지사항(notice)</td>
 										<td>공지 게시판 > 상세화면</td>
-										<td><a href="/gcart/home/notice/notice.html" target="_page">notice_detail.html</a></td>
+										<td><a href="../notice/notice.html" target="_page">notice_detail.html</a></td>
 										<td>완료</td>
 									</tr>
 								</tbody>
@@ -129,7 +129,7 @@
 
 			<script type="text/javascript">
 				;(function ($, win, doc, undefined) {
-					$(doc).on('ready.GC', function(){
+					$(doc).on('ready.cts', function(){
             
 					});
 				})(jQuery, window, document);
