--- a/home/business/culture.html
+++ b/home/business/culture.html
@@ -14,19 +14,19 @@
 
 	<title>지역문화 : 과천문화재단</title>
 
-	<link rel="stylesheet" href="/gcart/home/resource/css/app.css">
+	<link rel="stylesheet" href="../resource/css/app.css">
 
-	<script src="/gcart/home/resource/js/lib/jquery-1.12.4.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/bluebird.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/slick.min.js"></script>
-	<script src="/gcart/home/resource/js/common.js"></script>
+	<script src="../resource/js/lib/jquery-1.12.4.min.js"></script>
+	<script src="../resource/js/lib/bluebird.min.js"></script>
+	<script src="../resource/js/lib/slick.min.js"></script>
+	<script src="../resource/js/common.js"></script>
 </head>
 <body>
 	<main id="wrap">
 		<header class="header-area"></header>
 		<!-- [Start] main-area -->
 		<section class="main-area" id="main">
-			<div class="visual-area" style="background-image:url('/gcart/home/resource/img/visual_culture.jpg');">
+			<div class="visual-area" style="background-image:url('../resource/img/visual_culture.jpg');">
 				<div class="visual-inner">
 					<div class="tit-area">
 						<h2 class="tit-d1">지역문화</h2>
@@ -41,7 +41,7 @@
 							<h3 class="tit-d3">과천축제</h3>
 							<p class="desc-d2">과천축제 소개글</p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_cultrue1.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_cultrue1.jpg');"></div>
 						<!-- [S] btn-area -->
 						<div class="btn-area upper">
 							<a href="#" class="btn-base primary"><span>자세히 보기<i class="ico-arr light"></i></span></a>
@@ -53,22 +53,22 @@
 							<h3 class="tit-d3">지역문화예술단체 창작지원</h3>
 							<p class="desc-d2">지역문화예술단체 창작지원</p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_cultrue2.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_cultrue2.jpg');"></div>
 					</div>
 					<div class="article">
 						<div class="tit-area pdr-s">
 							<h3 class="tit-d3">지역문화예술단체 창작지원</h3>
 							<p class="desc-d2">지역문화예술단체 창작지원</p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_cultrue2.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_cultrue2.jpg');"></div>
 					</div>
 				</div>
 			</div>
 
 			<script type="text/javascript">
 				;(function ($, win, doc, undefined) {
-					$(doc).on('ready.GC', function(){
-						GC.mainSlider.init();
+					$(doc).on('ready.cts', function(){
+						cts.mainSlider.init();
 					});
 				})(jQuery, window, document);
 			</script>
