--- a/home/business/education.html
+++ b/home/business/education.html
@@ -14,19 +14,19 @@
 
 	<title>예술교육 : 과천문화재단</title>
 
-	<link rel="stylesheet" href="/gcart/home/resource/css/app.css">
+	<link rel="stylesheet" href="../resource/css/app.css">
 
-	<script src="/gcart/home/resource/js/lib/jquery-1.12.4.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/bluebird.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/slick.min.js"></script>
-	<script src="/gcart/home/resource/js/common.js"></script>
+	<script src="../resource/js/lib/jquery-1.12.4.min.js"></script>
+	<script src="../resource/js/lib/bluebird.min.js"></script>
+	<script src="../resource/js/lib/slick.min.js"></script>
+	<script src="../resource/js/common.js"></script>
 </head>
 <body>
 	<main id="wrap">
 		<header class="header-area"></header>
 		<!-- [Start] main-area -->
 		<section class="main-area" id="main">
-			<div class="visual-area" style="background-image:url('/gcart/home/resource/img/visual_education.jpg');">
+			<div class="visual-area" style="background-image:url('../resource/img/visual_education.jpg');">
 				<div class="visual-inner">
 					<div class="tit-area">
 						<h2 class="tit-d1">예술교육</h2>
@@ -41,7 +41,7 @@
 							<h3 class="tit-d3">예술교육프로그램</h3>
 							<p class="desc-d2">아시아 문학중심을 꿈꾸는 과천문화재단 극장 대관안내</p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_education1.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_education1.jpg');"></div>
 						<div class="btn-area upper">
 							<a href="#" class="btn-base primary"><span>신청하기<i class="ico-arr light"></i></span></a>
 						</div>
@@ -51,7 +51,7 @@
 							<h3 class="tit-d3">예술아카데미</h3>
 							<p class="desc-d2">예술아카데미</p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_education2.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_education2.jpg');"></div>
 						<div class="btn-area upper">
 							<a href="#" class="btn-base primary"><span>신청하기<i class="ico-arr light"></i></span></a>
 						</div>
@@ -61,8 +61,8 @@
 
 			<script type="text/javascript">
 				;(function ($, win, doc, undefined) {
-					$(doc).on('ready.GC', function(){
-						GC.mainSlider.init();
+					$(doc).on('ready.cts', function(){
+						cts.mainSlider.init();
 					});
 				})(jQuery, window, document);
 			</script>
