--- a/home/business/concert.html
+++ b/home/business/concert.html
@@ -14,19 +14,19 @@
 
 	<title>공연전시 : 과천문화재단</title>
 
-	<link rel="stylesheet" href="/gcart/home/resource/css/app.css">
+	<link rel="stylesheet" href="../resource/css/app.css">
 
-	<script src="/gcart/home/resource/js/lib/jquery-1.12.4.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/bluebird.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/slick.min.js"></script>
-	<script src="/gcart/home/resource/js/common.js"></script>
+	<script src="../resource/js/lib/jquery-1.12.4.min.js"></script>
+	<script src="../resource/js/lib/bluebird.min.js"></script>
+	<script src="../resource/js/lib/slick.min.js"></script>
+	<script src="../resource/js/common.js"></script>
 </head>
 <body>
 	<main id="wrap">
 		<header class="header-area"></header>
 		<!-- [Start] main-area -->
 		<section class="main-area" id="main">
-			<div class="visual-area" style="background-image:url('/gcart/home/resource/img/visual_concert.jpg');">
+			<div class="visual-area" style="background-image:url('../resource/img/visual_concert.jpg');">
 				<div class="visual-inner">
 					<div class="tit-area">
 						<h2 class="tit-d1">공연<span class="txt-dot">&dot;</span>전시</h2>
@@ -41,7 +41,7 @@
 							<h3 class="tit-d3">금난새와 함께하는 D·OPERA &lt;마티네 콘서트 : 카르멘&gt; </h3>
 							<p class="desc-d2">지휘자 금난새의 해설, 오케스트라의 반주가 더해진 마티네 콘서트</p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_concert1.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_concert1.jpg');"></div>
 						<div class="btn-area upper">
 							<a href="#" class="btn-base primary"><span>예매하기<i class="ico-arr light"></i></span></a>
 						</div>
@@ -51,7 +51,7 @@
 							<h3 class="tit-d3">혼돈의 시간, 엇갈린 행로: 해방 공간의 영화인들</h3>
 							<p class="desc-d2">분단의 역사와 한국전쟁이 가져온 민족적 비극을 되새기기 위한 전시</p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_concert2.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_concert2.jpg');"></div>
 						<div class="btn-area upper">
 							<a href="#" class="btn-base primary"><span>예매하기<i class="ico-arr light"></i></span></a>
 						</div>
@@ -61,7 +61,7 @@
 							<h3 class="tit-d3 fc-primary">필름영사: 잃어버린 시간을 찾아서</h3> <!-- [D] 주요게시글에 .fc-primary 클래스 추가 -->
 							<p class="desc-d2">오래된 극장에서 영사기를 고치며 무성영화 음악가였던 영사기사의 이야기</p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_concert3.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_concert3.jpg');"></div>
 						<div class="btn-area upper">
 							<a href="#" class="btn-base primary"><span>예매하기<i class="ico-arr light"></i></span></a>
 						</div>
@@ -71,7 +71,7 @@
 							<h3 class="tit-d3 fc-primary">가족 음악회: 동물의 사육제</h3>
 							<p class="desc-d2">프랑스 작곡가 카미유 생상스는 유명한 &lt;동물의 사육제&gt;로 동물의 세계를 다채롭고 매혹적인 음악으로 형상화해냈다. </p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_concert4.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_concert4.jpg');"></div>
 						<div class="btn-area upper">
 							<a href="#" class="btn-base primary"><span>예매하기<i class="ico-arr light"></i></span></a>
 						</div>
@@ -81,8 +81,8 @@
 
 			<script type="text/javascript">
 				;(function ($, win, doc, undefined) {
-					$(doc).on('ready.GC', function(){
-						GC.mainSlider.init();
+					$(doc).on('ready.cts', function(){
+						cts.mainSlider.init();
 					});
 				})(jQuery, window, document);
 			</script>
