--- a/home/business/theater.html
+++ b/home/business/theater.html
@@ -14,19 +14,19 @@
 
 	<title>극장안내·대관 : 과천문화재단</title>
 
-	<link rel="stylesheet" href="/gcart/home/resource/css/app.css">
+	<link rel="stylesheet" href="../resource/css/app.css">
 
-	<script src="/gcart/home/resource/js/lib/jquery-1.12.4.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/bluebird.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/slick.min.js"></script>
-	<script src="/gcart/home/resource/js/common.js"></script>
+	<script src="../resource/js/lib/jquery-1.12.4.min.js"></script>
+	<script src="../resource/js/lib/bluebird.min.js"></script>
+	<script src="../resource/js/lib/slick.min.js"></script>
+	<script src="../resource/js/common.js"></script>
 </head>
 <body>
 	<main id="wrap">
 		<header class="header-area"></header>
 		<!-- [Start] main-area -->
 		<section class="main-area" id="main">
-			<div class="visual-area" style="background-image:url('/gcart/home/resource/img/visual_theater.jpg');">
+			<div class="visual-area" style="background-image:url('../resource/img/visual_theater.jpg');">
 				<div class="visual-inner">
 					<div class="tit-area">
 						<h2 class="tit-d1">극장안내<span class="txt-dot">&dot;</span>대관</h2>
@@ -41,7 +41,7 @@
 							<h3 class="tit-d3">극장</h3>
 							<p class="desc-d2">아시아 문학중심을 꿈꾸는 과천문화재단 극장 대관안내</p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_theater1.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_theater1.jpg');"></div>
 						<div class="btn-area upper col2">
 							<a href="#" class="btn-base"><span>자료 다운로드<i class="ico-download"></i></span></a>
 							<a href="#" class="btn-base primary"><span>대관신청<i class="ico-arr light"></i></span></a>
@@ -52,7 +52,7 @@
 							<h3 class="tit-d3">문화제실</h3>
 							<p class="desc-d2">문화제실 소개글</p>
 						</div>
-						<div class="img-area" style="background-image:url('/gcart/home/resource/img/@temp/@img_theater2.jpg');"></div>
+						<div class="img-area" style="background-image:url('../resource/img/@temp/@img_theater2.jpg');"></div>
 						<div class="btn-area upper col2">
 							<a href="#" class="btn-base"><span>자료 다운로드<i class="ico-download"></i></span></a>
 							<a href="#" class="btn-base primary"><span>대관신청<i class="ico-arr light"></i></span></a>
@@ -63,8 +63,8 @@
 
 			<script type="text/javascript">
 				;(function ($, win, doc, undefined) {
-					$(doc).on('ready.GC', function(){
-						GC.mainSlider.init();
+					$(doc).on('ready.cts', function(){
+						cts.mainSlider.init();
 					});
 				})(jQuery, window, document);
 			</script>
