--- a/home/intro/map.html
+++ b/home/intro/map.html
@@ -14,19 +14,19 @@
 
 	<title>찾아오는 길 : 과천문화재단</title>
 
-	<link rel="stylesheet" href="/gcart/home/resource/css/app.css">
+	<link rel="stylesheet" href="../resource/css/app.css">
 
-	<script src="/gcart/home/resource/js/lib/jquery-1.12.4.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/bluebird.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/slick.min.js"></script>
-	<script src="/gcart/home/resource/js/common.js"></script>
+	<script src="../resource/js/lib/jquery-1.12.4.min.js"></script>
+	<script src="../resource/js/lib/bluebird.min.js"></script>
+	<script src="../resource/js/lib/slick.min.js"></script>
+	<script src="../resource/js/common.js"></script>
 </head>
 <body>
 	<main id="wrap">
 		<header class="header-area"></header>
 		<!-- [Start] main-area -->
 		<section class="main-area" id="main">
-			<div class="visual-area" style="background-image:url('/gcart/home/resource/img/visual_intro.jpg');">
+			<div class="visual-area" style="background-image:url('../resource/img/visual_intro.jpg');">
 				<div class="visual-inner">
 					<div class="tit-area">
 						<h2 class="tit-d1">찾아오는 길</h2>
@@ -37,7 +37,7 @@
 			<div class="cont-area">
 				<div class="cont-grid">
 					<div class="article bdb">
-						<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4871be889d5272d1e6d0f2c6a44fa5dd"></script> <!-- [D] 도메인이 127.0.0.1:5500 또는 gcart.or.kr 일 경우만 API가 실행됩니다. -->
+						<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4871be889d5272d1e6d0f2c6a44fa5dd"></script> <!-- [D] 도메인이 127.0.0.1:5500 또는 cts.or.kr 일 경우만 API가 실행됩니다. -->
 						<div id="map" class="map-area"></div>
 						<div class="map-desc">
 							주소 : <span id="addressID">경기도 과천시 통영로5 과천시민회관 문화동 2층</span>
@@ -76,8 +76,8 @@
 
 			<script type="text/javascript">
 				;(function ($, win, doc, undefined) {
-					$(doc).on('ready.GC', function(){
-						window.GC.kakaomap.init();
+					$(doc).on('ready.cts', function(){
+						window.cts.kakaomap.init();
 					});
 				})(jQuery, window, document);
 			</script>
