--- a/home/notice/notice.html
+++ b/home/notice/notice.html
@@ -14,19 +14,19 @@
 
 	<title>공지사항 : 과천문화재단</title>
 
-	<link rel="stylesheet" href="/gcart/home/resource/css/app.css">
+	<link rel="stylesheet" href="../resource/css/app.css">
 
-	<script src="/gcart/home/resource/js/lib/jquery-1.12.4.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/bluebird.min.js"></script>
-	<script src="/gcart/home/resource/js/lib/slick.min.js"></script>
-	<script src="/gcart/home/resource/js/common.js"></script>
+	<script src="../resource/js/lib/jquery-1.12.4.min.js"></script>
+	<script src="../resource/js/lib/bluebird.min.js"></script>
+	<script src="../resource/js/lib/slick.min.js"></script>
+	<script src="../resource/js/common.js"></script>
 </head>
 <body>
 	<main id="wrap">
 		<header class="header-area"></header>
 		<!-- [Start] main-area -->
 		<section class="main-area" id="main">
-			<div class="visual-area" style="background-image:url('/gcart/home/resource/img/visual_notice.jpg');">
+			<div class="visual-area" style="background-image:url('../resource/img/visual_notice.jpg');">
 				<div class="visual-inner">
 					<div class="tit-area">
 						<h2 class="tit-d1">공지사항</h2>
@@ -165,7 +165,7 @@
 
 			<script type="text/javascript">
 				;(function ($, win, doc, undefined) {
-					$(doc).on('ready.GC', function(){
+					$(doc).on('ready.cts', function(){
 					});
 				})(jQuery, window, document);
 			</script>
