--- a/home/main/index.html
+++ b/home/main/index.html
@@ -24,23 +24,6 @@
 <body>
 	<main id="wrap">
 		<header class="header-area"></header>
-		<!-- [Start] Layer Popup 
-		<div class="layer-wrap" id="modalAD" style="display:none;">
-			<div class="layer-inner">
-				<div class="ad-img">
-					<img src="../resource/img/@temp/@ad.jpg" alt="">
-				</div>
-				<input type="checkbox" id="chkNoShowToday" onchange="
-				">
-				<label for="chkNoShowToday" class="lb-check light">오늘 하루 보지않기</label>
-				<button type="button" class="layer-btn-close btn-close" onclick="
-					$('#modalAD').hide();
-					if (document.querySelector('#chkNoShowToday').checked) {
-						window.cts.cookieControl.setCookie('todayCookie', 'done', 1);
-					}
-				"><span class="blind">닫기</span></button>
-			</div>
-		</div> -->
 
 		<!-- [Start] main-area -->
 		<section class="main-area" id="main">
@@ -148,7 +131,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</span>
 									<a href="#" class="inner">
 										<strong>남가주 범교민 6.25 한국전쟁 70주년</strong>
@@ -159,7 +142,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</span>
 									<a href="#" class="inner">
 										<strong>남가주 범교민 6.25 한국전쟁 70주년 남가주 범교민 6.25 한국전쟁 70주년</strong>
@@ -170,7 +153,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</span>
 									<a href="#" class="inner">
 										<strong>LA에서 이어지는 한인교회의 사랑나눔</strong>
@@ -181,7 +164,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</span>
 									<a href="#" class="inner">
 										<strong>LA에서 이어지는 한인교회의 사랑나눔</strong>
@@ -219,7 +202,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</span>
 									<a href="#" class="inner">
 										<strong>내가매일 기쁘게 <i>2021-03-04</i></strong>
@@ -230,7 +213,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</span>
 									<a href="#" class="inner">
 										<strong>내가매일 기쁘게 <i>2021-03-04</i></strong>
@@ -241,7 +224,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</span>
 									<a href="#" class="inner">
 										<strong>내가매일 기쁘게 <i>2021-03-04</i></strong>
@@ -252,7 +235,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</span>
 									<a href="#" class="inner">
 										<strong>내가매일 기쁘게 <i>2021-03-04</i></strong>
