--- a/home/main/index.html
+++ b/home/main/index.html
@@ -27,6 +27,23 @@
 
 		<!-- [Start] main-area -->
 		<section class="main-area" id="main">
+			<div class="banner-area">
+				<span>
+					<a href="#">
+						<img src="" alt="">
+					</a>
+				</span>
+				<span>
+					<a href="#">
+						<img src="" alt="">
+					</a>
+				</span>
+				<span>
+					<a href="#">
+						<img src="" alt="">
+					</a>
+				</span>
+			</div>
 			<div class="visual-area main">
 				<div class="visual-inner">
 					<!-- [Start] slider -->
