top, header done

--- a/home/main/index.html
+++ b/home/main/index.html
@@ -22,28 +22,52 @@
 	<script src="../resource/js/common.js"></script>
 </head>
 <body>
-	<main id="wrap">
+	<main id="wrap" class="main-wrap">
+		<div class="banner-area">
+			<div class="banner-inner">
+				<span>
+					<a href="#">
+						<img src="../resource/img/banner1.jpg" alt="">
+					</a>
+				</span>
+				<span>
+					<a href="#">
+						<img src="../resource/img/banner2.jpg" alt="">
+					</a>
+				</span>
+				<span>
+					<a href="#">
+						<img src="../resource/img/banner3.jpg" alt="">
+					</a>
+				</span>
+			</div>
+			<button type="button" class="btn-toggle"><span class="blind">열고 닫기</span></button>
+		</div>
+
+		<div class="slider-area slider-banner">
+			<div class="slider-inner banner-inner">
+				<span>
+					<a href="#">
+						<img src="../resource/img/banner1.jpg" alt="">
+					</a>
+				</span>
+				<span>
+					<a href="#">
+						<img src="../resource/img/banner2.jpg" alt="">
+					</a>
+				</span>
+				<span>
+					<a href="#">
+						<img src="../resource/img/banner3.jpg" alt="">
+					</a>
+				</span>
+			</div>
+			<button type="button" class="btn-toggle"><span class="blind">열고 닫기</span></button>
+		</div>
 		<header class="header-area"></header>
 
 		<!-- [Start] main-area -->
 		<section class="main-area" id="main">
-			<div class="banner-area">
-				<span>
-					<a href="#">
-						<img src="" alt="">
-					</a>
-				</span>
-				<span>
-					<a href="#">
-						<img src="" alt="">
-					</a>
-				</span>
-				<span>
-					<a href="#">
-						<img src="" alt="">
-					</a>
-				</span>
-			</div>
 			<div class="visual-area main">
 				<div class="visual-inner">
 					<!-- [Start] slider -->
@@ -148,7 +172,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 									</span>
 									<a href="#" class="inner">
 										<strong>남가주 범교민 6.25 한국전쟁 70주년</strong>
@@ -159,7 +183,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 									</span>
 									<a href="#" class="inner">
 										<strong>남가주 범교민 6.25 한국전쟁 70주년 남가주 범교민 6.25 한국전쟁 70주년</strong>
@@ -170,7 +194,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 									</span>
 									<a href="#" class="inner">
 										<strong>LA에서 이어지는 한인교회의 사랑나눔</strong>
@@ -181,7 +205,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 									</span>
 									<a href="#" class="inner">
 										<strong>LA에서 이어지는 한인교회의 사랑나눔</strong>
@@ -219,7 +243,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 									</span>
 									<a href="#" class="inner">
 										<strong>내가매일 기쁘게 <i>2021-03-04</i></strong>
@@ -230,7 +254,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 									</span>
 									<a href="#" class="inner">
 										<strong>내가매일 기쁘게 <i>2021-03-04</i></strong>
@@ -241,7 +265,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 									</span>
 									<a href="#" class="inner">
 										<strong>내가매일 기쁘게 <i>2021-03-04</i></strong>
@@ -252,7 +276,7 @@
 							<div class="slide card-item">
 								<div class="card-cont">
 									<span class="thumb">
-										<iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<!-- <iframe width="424" height="238" src="https://www.youtube.com/embed/18a3_GxbhKg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 									</span>
 									<a href="#" class="inner">
 										<strong>내가매일 기쁘게 <i>2021-03-04</i></strong>
@@ -403,9 +427,41 @@
 				;(function ($, win, doc, undefined) {
 					$(doc).on('ready.cts', function(){
 						cts.mainSlider.init();
-						// if (!window.cts.cookieControl.isHasCookie()){
-						// 	$('#modalAD').show();
-						// };
+						cts.navFixed.init();
+
+						
+						
+						$('.btn-toggle').off('click.btnToggle').on('click.btnToggle', function(){
+							var $wrap = $('.banner-area, .slider-banner');
+							var $banners = $wrap.find('.banner-inner');
+							var $btn = $(this);
+
+							if ($wrap.hasClass('close')) {
+								$wrap.removeClass('close');
+								$banners.slideDown(200, function(){
+
+								});
+								$btn.removeClass('close');
+							} else {
+								$banners.slideUp(200, function(){
+									$wrap.addClass('close');
+								});
+								$btn.addClass('close');
+							}
+						})
+
+						$('.slider-banner .slider-inner').slick({
+							infinite: true,
+							speed: 400,
+							autoplay: true,
+							autoplaySpeed: 3000,
+							slidesToShow: 1,
+							slidesToScroll: 1,
+							prevArrow: $('.news .slick-prev'),
+							nextArrow: $('.news .slick-next'),
+							pauseOnHover: false,
+							dots: false,
+						});
 
 						$('.slider-news .slider-inner').slick({
 							infinite: true,
